frontend/test/should_pass/iterated_001.grg
pattern SpanningTree(root:Node)
{
	iterated {
		root -- next:Node;
		:SpanningTree(next);
	}
}

pattern SpanningTreeReverse(root:Node)
{
	iterated {
		root --> next:Node;
		str:SpanningTreeReverse(next);
		
		replace {
			root <-- next;
			str();
		}
	}
	
	modify { }
}

test blowball
{
	head:Node;
	iterated {
		head --> .;
	}
}

rule blowballDouble
{
	head:Node;
	iterated {
		head --> .;
		
		modify {
			head --> .;
		}
	}
	
	modify { }
}
