frontend/test/should_fail/pattern_002.grg
pattern Foo(x:Node)
{
	x;
	
	modify {
		delete(x);
	}
}
